plugins {
    id 'java'
    id 'net.minecraftforge.gradle' version '6.0.54'
}
version = mod_version
group = mod_group_id
base { archivesName = 'animania-forge-1.20.1' }
java.toolchain.languageVersion = JavaLanguageVersion.of(17)
minecraft {
    mappings channel: 'official', version: '1.20.1'
    runs {
        client { workingDirectory project.file('run'); mods { animania { source sourceSets.main } } }
        server { workingDirectory project.file('run'); args '--nogui'; mods { animania { source sourceSets.main } } }
    }
}
repositories {
    exclusiveContent {
        forRepository { maven { url = uri('libs/maven') } }
        filter { includeVersion('maven.modrinth', 'emi', project.emi_version) }
    }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://api.modrinth.com/maven' }
}
dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    compileOnly fg.deobf("maven.modrinth:jade:${jade_version}")
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${jei_version}")
    compileOnly fg.deobf("maven.modrinth:emi:${emi_version}")
}
sourceSets.main.resources { srcDir 'src/generated/resources'; exclude '**/*.bbmodel' }
tasks.named('processResources', ProcessResources).configure {
    def props = [mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version]
    inputs.properties props
    from('src/main/templates') { expand props }
}
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8'; options.compilerArgs += ['-Xmaxerrs', '1000'] }
tasks.named('jar', Jar).configure {
    from(project.files('LICENSE', 'COPYING', 'NOTICE')) { into 'META-INF' }
    finalizedBy 'reobfJar'
}
